test/invalid/divided_by_zero.ml
# variable initialize to 0 in an expression, if not define.
# an exprssion is constant identifer expre or funciton call, or their combinations.

print a * b - c # this is legal, print 0.but a() is not because it is a function.
print printf * (snprintf + println) / fprintf # error divided by 0
return (returnx - yreturn) * zreturn
